--- a/libs/auth/lazy/sign/src/lib/sign-in/sign-in.component.html
+++ b/libs/auth/lazy/sign/src/lib/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
   [@animate]="{ value: '*', params: { duration: '300ms', y: '100px' } }"
 >
   <mat-card>
-    <auth-in></auth-in>
+    <auth-in [form]="form" (in)="onSignIn($event)"></auth-in>
   </mat-card>
   <a routerLink="../up" mat-button>Up</a>
 </div>
