--- a/libs/account/lazy/auth/src/lib/auth-layout.component.scss
+++ b/libs/account/lazy/auth/src/lib/auth-layout.component.scss
@@ -15,3 +15,17 @@
   align-items: center;
   flex: 1;
 }
+// .mat-form-field.big {
+//   input {
+//     height: 2em;
+//     div.mat-form-field-infix {
+//       padding: 0.3em 0;
+//       input.mat-input-element {
+//         vertical-align: top;
+//       }
+//     }
+//   }
+//   div.mat-form-field-wrapper {
+//     padding-bottom: 1.15em;
+//   }
+// }
