--- a/apps/agent-workdesk/src/styles.scss
+++ b/apps/agent-workdesk/src/styles.scss
@@ -132,19 +132,19 @@ a {
 // .m-t-16 {
 //   margin-top: 16px;
 // }
-.margin-left {
-  margin-left: 10px;
-}
-.radio-label-padding {
-  padding-right: 10px;
-  color: grey;
-}
-.form {
-  margin-left: 10px;
-  border: 2px solid lightgray;
-  width: 600px;
-  padding-left: 5px;
-  margin-top: 10px;
-}
+// .margin-left {
+//   margin-left: 10px;
+// }
+// .radio-label-padding {
+//   padding-right: 10px;
+//   color: grey;
+// }
+// .form {
+//   margin-left: 10px;
+//   border: 2px solid lightgray;
+//   width: 600px;
+//   padding-left: 5px;
+//   margin-top: 10px;
+// }
 // html, body { height: 100%; }
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
