--- a/libs/account/lazy/auth/src/lib/login/login.component.html
+++ b/libs/account/lazy/auth/src/lib/login/login.component.html
@@ -48,12 +48,7 @@
       </div>
     </form>
     <div class="actions">
-      <button
-        type="button"
-        class="forgot"
-        mat-button
-        (click)="onForgot()"
-      >
+      <button type="button" class="forgot" mat-button (click)="onForgot()">
         Esqueceu seu email?
       </button>
       <button
@@ -66,8 +61,6 @@
         Criar conta
       </button>
     </div>
-    <!-- <mat-card-actions fxLayout="row grid" fxLayoutGap="16px" fxLayoutAlign="space-between">
-    </mat-card-actions> -->
   </mat-card>
   <mat-menu #menu="matMenu" xPosition="before">
     <a mat-menu-item routerLink="criar-conta">Pra mim</a>
