--- a/libs/account/lazy/auth/src/lib/auth-layout.component.scss
+++ b/libs/account/lazy/auth/src/lib/auth-layout.component.scss
@@ -13,15 +13,15 @@
     height: 100%;
   }
 }
-:host ::ng-deep router-outlet ~ * {
-  display: flex;
-  flex-flow: column;
-  flex: 1;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-}
+// :host ::ng-deep router-outlet ~ * {
+//   display: flex;
+//   flex-flow: column;
+//   flex: 1;
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   overflow: auto;
+// }
 // :host {
 //   flex: 1;
 //   display: flex;
