--- a/libs/account/lazy/auth/src/lib/login/login.component.scss
+++ b/libs/account/lazy/auth/src/lib/login/login.component.scss
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
   .mat-card {
-    width: 350px;
-    padding-bottom: 9px;
+    // width: 350px;
+    // padding-bottom: 9px;
     display: flex;
     flex-flow: column;
     .mat-form-field {
@@ -18,11 +18,33 @@
     justify-content: space-between;
     margin: 18px -9px -9px -9px;
   }
-  .forgot {
-    text-align: left;
-  }
-  .register {
-    margin-right: 0px;
-    text-align: right;
-  }
 }
+
+// :host {
+//   flex: 1;
+//   display: flex;
+//   flex-flow: column;
+//   justify-content: center;
+//   align-items: center;
+//   .mat-card {
+//     width: 350px;
+//     padding-bottom: 9px;
+//     display: flex;
+//     flex-flow: column;
+//     .mat-form-field {
+//       width: 100%;
+//     }
+//   }
+//   .actions {
+//     display: flex;
+//     justify-content: space-between;
+//     margin: 18px -9px -9px -9px;
+//   }
+//   // .forgot {
+//   //   text-align: left;
+//   // }
+//   // .register {
+//   //   margin-right: 0px;
+//   //   text-align: right;
+//   // }
+// }
