--- a/libs/ui-styles/_utils.scss
+++ b/libs/ui-styles/_utils.scss
@@ -11,7 +11,15 @@
   display: flex;
   flex-direction: column;
 }
-
+.text-left {
+  text-align: left;
+}
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
 .flex-row {
   display: flex;
   flex-direction: row;
