--- a/libs/account/lazy/account/src/lib/account-layout.component.html
+++ b/libs/account/lazy/account/src/lib/account-layout.component.html
@@ -7,6 +7,9 @@
     <a mat-menu-item routerLink="membros/grupos">Grupos</a>
   </mat-menu>
   <span fxFlex></span>
+  <a routerLink="instrutores" mat-button>
+    Instrutores
+  </a>
   <!-- <a routerLink="membros" mat-button>
     Membros
   </a>
