--- a/libs/account/lazy/account/src/lib/members/groups/groups.component.html
+++ b/libs/account/lazy/account/src/lib/members/groups/groups.component.html
@@ -1,7 +1,7 @@
 <button mat-button (click)="getUserGroupTypes()">
   Ver tipos
 </button>
-<button mat-button (click)="createUserGroupType()">
+<button mat-button class="pos-abs right-16 bottom-16" (click)="createUserGroupType()">
   Criar tipo
 </button>
 
