--- a/libs/account/lazy/account/src/lib/members/members.component.html
+++ b/libs/account/lazy/account/src/lib/members/members.component.html
@@ -2,7 +2,7 @@
   <div fxFlex>
     <router-outlet></router-outlet>
   </div>
-  <div fxFlex="300px">
+  <!-- <div fxFlex="300px">
     <mat-card helperAnchor="members">
       <mat-nav-list>
         <mat-list-item>
@@ -19,5 +19,5 @@
         </mat-list-item>
       </mat-nav-list>
     </mat-card>
-  </div>
+  </div> -->
 </div>
