--- a/libs/account/lazy/account/src/lib/members/users/users.component.html
+++ b/libs/account/lazy/account/src/lib/members/users/users.component.html
@@ -1,6 +1,6 @@
 <p>users works!</p>
-<button mat-button (click)="addUserGroup()">
+<!-- <button mat-button (click)="addUserGroup()">
   Adicionar usuário ao grupo
-</button>
+</button> -->
 
 <!-- <account-user-in-group></account-user-in-group> -->
