--- a/libs/account/lazy/auth/src/lib/login/login.component.html
+++ b/libs/account/lazy/auth/src/lib/login/login.component.html
@@ -41,7 +41,8 @@
         </mat-error>
       </mat-form-field>
 
-      <div class="flex justify-end">
+      <div class="flex justify-between">
+        <mat-error>{{serverMessage}}</mat-error>
         <button mat-flat-button color="accent" type="submit">
           Enviar
         </button>
