--- a/libs/common/forms/dynamic-form/src/lib/dynamic-form/dynamic-form.component.html
+++ b/libs/common/forms/dynamic-form/src/lib/dynamic-form/dynamic-form.component.html
@@ -8,5 +8,5 @@
   >
   </ng-container>
 </form>
-<pre>{{form.value | json}}</pre>
-<pre>{{form.errors | json}}</pre>
+<!-- <pre>{{form.value | json}}</pre>
+<pre>{{form.errors | json}}</pre> -->
