--- a/libs/common/forms/dynamic-form/src/lib/components/form-select/form-select.component.html
+++ b/libs/common/forms/dynamic-form/src/lib/components/form-select/form-select.component.html
@@ -1,12 +1,16 @@
-<mat-form-field class="w-full" [appearance]="field.appearance" [formGroup]="group">
-  <mat-label>{{field.label}}</mat-label>
+<mat-form-field
+  class="w-full"
+  [appearance]="field.appearance"
+  [formGroup]="group"
+>
+  <!-- <mat-label>{{field.label}}</mat-label> -->
   <mat-select [placeholder]="field.label" [formControlName]="field.name">
-    <mat-option *ngFor="let item of options" [value]="item.value">{{
+    <mat-option *ngFor="let item of (options$ | async)" [value]="item.value">{{
       item.viewValue
     }}</mat-option>
   </mat-select>
 </mat-form-field>
-
+<!-- <pre>{{ (options$ | async) | json }}</pre> -->
 <!-- <mat-form-field class="w-full margin-top" [formGroup]="group">
   <mat-select [placeholder]="field.label" [formControlName]="field.name">
     <ng-container *ngIf="field.asyncOptions; else syncOptions">
